DevTools: [Console] fix wrapping of strings in console messages
The patch removes horizontal scroll bar whenever a long string is dumped
into console.

BUG=426343
R=pfeldman

Review URL: https://codereview.chromium.org/828783007

git-svn-id: svn://svn.chromium.org/blink/trunk@188285 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/inspectorStyle.css
+++ b/front_end/inspectorStyle.css
@@ -285,7 +285,7 @@ body.undocked.platform-mac.inactive .inspector-view-tabbed-pane.tabbed-pane::sha
 .console-formatted-regexp,
 .console-formatted-symbol {
     color: rgb(196, 26, 22);
-    white-space: pre;
+    white-space: pre-wrap;
     unicode-bidi: -webkit-isolate;
 }
 
